# tgcpspatial

python/: config.py  inference.py  pyproject.toml
python/krupic2018/: README.txt  binned_data_krupic_bauza_2018_r2405_051216b_cell1816.mat  r2288_180515b_tet2_cell2_GC.mat  r2289_250515b_tet2_cell2_GC.mat  r2298_290615c_tet6_cell6_GC.mat  r2375_070416a_tet1_cell1_GC.mat  r2375_140416b_tet1_cell1_GC.mat  r2375_210416a_tet3_cell3_GC.mat  r2383_160516b_tet4_cell4_GC.mat  r2405_011216a_cell2955.mat  r2405_051216b_cell1816.mat  r2405_121216b_cell1880.mat  r2405_121216b_cell1912.mat  r2405_191216c_cell1640.mat  r2405_191216c_cell1662.mat  r2405_191216c_cell1962.mat  r2405_191216c_cell1990.mat  simulated_data_L128_P12_α0p50_μ0p18.mat
python/lgcp/: data.py  gridsearch.py  infer.py  kern.py  plot.py  post.py  sg.py  util.py
python/notebooks/figures/f1/: f1v2.ipynb
python/notebooks/figures/f2/: f2v2.ipynb
python/notebooks/figures/f3/: f3a_v2_kernel_examples.ipynb  f3cd_v2.ipynb
python/notebooks/figures/f5/: f5v6a_headir_by_partitioning.ipynb  f5v6b_headir_by_gp.ipynb
python/notebooks/figures/f6/: f6v1_part1.ipynb  f6v2_part2.ipynb
python/notebooks/hyperparameter_fits/: fit_all_periods_variances_orientations.ipynb
