[project]
name = "tgcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "multiprocess>=0.70.18",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "threadpoolctl>=3.6.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501",  # Line too long - many long lines in scientific code
    "E701",  # Multiple statements on one line (colon) - common in this codebase
    "E702",  # Multiple statements on one line (semicolon)
    "E722",  # Bare except - existing code pattern
    "E731",  # Do not assign a lambda expression - lambdas are fine
    "UP031", # Use format specifiers instead of percent format - too much work
    "B904",  # Exception chaining - not critical for this codebase
    "B905",  # zip() without an explicit strict= parameter - not critical
]
